add w2 progress rate

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -15,6 +15,8 @@
 <p></p>
 <p>2.<a href="https://rust-lang.tw/book-tw/title-page.html">中文入門</a></p>
 <p></p>
+<p>3.<a href="https://www.bilibili.com/video/BV1hp4y1k7SV?p=1">教學影片</a></p>
+<p></p>
 <p></p>
 <p></p>
 <p></p><h1>Develop</h1>
