--- a/config/content.htm
+++ b/config/content.htm
@@ -27,3 +27,5 @@
 <p><strong>week1</strong></p>
 <p>1.<span>電腦輔助設計室IPv6 網路設定</span></p>
 <p><span>2.創建wcm2022倉儲</span></p>
+<p><strong>week2</strong></p>
+<p>1.添加Rust頁面</p>
