--- a/content/progress rate.html
+++ b/content/progress rate.html
@@ -142,7 +142,9 @@ img.add_border {
     <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <br /><h1>progress rate</h1>
 <p><strong>week1</strong></p>
 <p>1.<span>電腦輔助設計室IPv6 網路設定</span></p>
-<p><span>2.創建wcm2022倉儲</span></p><br />Develop << <a href='Develop.html'>Previous</a> </div>
+<p><span>2.創建wcm2022倉儲</span></p>
+<p><strong>week2</strong></p>
+<p>1.添加Rust頁面</p><br />Develop << <a href='Develop.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
