--- a/content/Rust.html
+++ b/content/Rust.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='Rust.html'>Rust</a></li></ul><li><a href='Develop.html'>Develop</a><li><a href='progress rate.html'>progress rate</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='progress rate.html'>progress rate</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>Rust</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Rust_src.html'>Next</a> >> Rust_src<br /><h1>Rust</h1>
 <p></p>
 <p><span>1.</span><a href="https://www.rust-lang.org/zh-TW/tools/install">安裝</a></p>
 <p></p>
@@ -149,7 +149,8 @@ img.add_border {
 <p></p>
 <p></p>
 <p></p>
-<p></p><br />About << <a href='About.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+<p></p>
+<br />About << <a href='About.html'>Previous</a> <a href='Rust_src.html'>Next</a> >> Rust_src</div>
         
     <!-- footer -->
       <div class="container">
