--- a/content/Rust_src.html
+++ b/content/Rust_src.html
@@ -2,7 +2,7 @@
         <head>
         <title>wcm2022</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,11 +139,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Rust_src << <a href='Rust_src.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
-<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
-<br />Rust_src << <a href='Rust_src.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
+    <div id="tipue_search_content">Rust << <a href='Rust.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>Rust_src</h1>
+<p></p>
+<p>1.<a href="https://gist.githubusercontent.com/41023146/01f9ebf316fb0333e341f1bbb950d68d/raw/19e5b14cc3549dcef140bbd2bf0e54b1af00cc90/Rust">hello_world</a></p><br />Rust << <a href='Rust.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
         
     <!-- footer -->
       <div class="container">
