--- a/content/progress rate.html
+++ b/content/progress rate.html
@@ -144,7 +144,9 @@ img.add_border {
 <p>1.<span>電腦輔助設計室IPv6 網路設定</span></p>
 <p><span>2.創建wcm2022倉儲</span></p>
 <p><strong>week2</strong></p>
-<p>1.添加Rust頁面</p><br />Develop << <a href='Develop.html'>Previous</a> </div>
+<p>1.添加Rust頁面</p>
+<p><strong>week3</strong></p>
+<p>1.學習建立可攜系統</p><br />Develop << <a href='Develop.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
