--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -32,3 +32,5 @@
 <p><span>2.創建wcm2022倉儲</span></p>
 <p><strong>week2</strong></p>
 <p>1.添加Rust頁面</p>
+<p><strong>week3</strong></p>
+<p>1.學習建立可攜系統</p>
