--- a/content/Rust_src.html
+++ b/content/Rust_src.html
@@ -141,7 +141,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Rust << <a href='Rust.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>Rust_src</h1>
 <p></p>
-<p>1.<a href="https://gist.githubusercontent.com/41023146/01f9ebf316fb0333e341f1bbb950d68d/raw/19e5b14cc3549dcef140bbd2bf0e54b1af00cc90/Rust">hello_world</a></p><br />Rust << <a href='Rust.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+<p>1.<a href="https://gist.githubusercontent.com/41023146/01f9ebf316fb0333e341f1bbb950d68d/raw/19e5b14cc3549dcef140bbd2bf0e54b1af00cc90/Rust">hello_world</a></p>
+<p>2.<a href="https://gist.githubusercontent.com/41023146/9f1ac36c4c187ca37996f221e7f1206e/raw/03bfea2ef0020c83e1a93a6ac52a7ceae3c7665c/Rust">string和str</a></p><br />Rust << <a href='Rust.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
         
     <!-- footer -->
       <div class="container">
