--- a/content/progress rate.html
+++ b/content/progress rate.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='progress rate.html'>progress rate</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,14 +139,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <br /><h1>progress rate</h1>
+    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='run.html'>Next</a> >> run<br /><h1>progress rate</h1>
 <p><strong>week1</strong></p>
 <p>1.<span>電腦輔助設計室IPv6 網路設定</span></p>
 <p><span>2.創建wcm2022倉儲</span></p>
 <p><strong>week2</strong></p>
 <p>1.添加Rust頁面</p>
 <p><strong>week3</strong></p>
-<p>1.學習建立可攜系統</p><br />Develop << <a href='Develop.html'>Previous</a> </div>
+<p>1.學習建立可攜系統</p>
+<br />Develop << <a href='Develop.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
         
     <!-- footer -->
       <div class="container">
