--- a/content/runsrc.html
+++ b/content/runsrc.html
@@ -2,7 +2,7 @@
         <head>
         <title>wcm2022</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,18 +139,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Rust_src.html'>Next</a> >> Rust_src<br /><h1>Rust</h1>
+    <div id="tipue_search_content">run << <a href='run.html'>Previous</a> <br /><h1>runsrc</h1>
 <p></p>
-<p><span>1.</span><a href="https://www.rust-lang.org/zh-TW/tools/install">安裝</a></p>
-<p></p>
-<p>2.<a href="https://rust-lang.tw/book-tw/title-page.html">中文入門</a></p>
-<p></p>
-<p>3.<a href="https://www.bilibili.com/video/BV1hp4y1k7SV?p=1">教學影片</a></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<br />About << <a href='About.html'>Previous</a> <a href='Rust_src.html'>Next</a> >> Rust_src</div>
+<p>(<a href="https://raw.githubusercontent.com/41023146/cp2021_hw/main/downloads/run.txt">run.txt</a>)</p><br />run << <a href='run.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
