--- a/content/progress rate.html
+++ b/content/progress rate.html
@@ -147,7 +147,8 @@ img.add_border {
 <p>1.添加Rust頁面</p>
 <p><strong>week3</strong></p>
 <p>1.學習建立可攜系統</p>
-<br />Develop << <a href='Develop.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
+<p></p>
+<p></p><br />Develop << <a href='Develop.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
         
     <!-- footer -->
       <div class="container">
