--- a/content/Rust_src.html
+++ b/content/Rust_src.html
@@ -143,7 +143,8 @@ img.add_border {
 <p></p>
 <p>1.<a href="https://gist.githubusercontent.com/41023146/01f9ebf316fb0333e341f1bbb950d68d/raw/19e5b14cc3549dcef140bbd2bf0e54b1af00cc90/Rust">hello_world</a></p>
 <p>2.<a href="https://gist.githubusercontent.com/41023146/9f1ac36c4c187ca37996f221e7f1206e/raw/03bfea2ef0020c83e1a93a6ac52a7ceae3c7665c/Rust">string和str</a></p>
-<p>3.<a href="https://gist.githubusercontent.com/41023146/3574bd45f15294249ccc0e53afb1de2c/raw/2c4375ba62ead8288263432ee38745cc99c19de8/Rust">guess</a></p><br />Rust << <a href='Rust.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+<p>3.<a href="https://gist.githubusercontent.com/41023146/3574bd45f15294249ccc0e53afb1de2c/raw/2c4375ba62ead8288263432ee38745cc99c19de8/Rust">guess</a></p>
+<p>4.<a href="https://gist.githubusercontent.com/41023146/14ddf3b4999e13d5c3d8cb659eea1057/raw/60f4bff6e9b4e51f89909cd7b42c12f79779b9c8/Rust">if let</a></p><br />Rust << <a href='Rust.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
         
     <!-- footer -->
       <div class="container">
