--- a/content/progress rate.html
+++ b/content/progress rate.html
@@ -147,8 +147,12 @@ img.add_border {
 <p>1.添加Rust頁面</p>
 <p><strong>week3</strong></p>
 <p>1.學習建立可攜系統</p>
-<p></p>
-<p></p><br />Develop << <a href='Develop.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
+<p><strong>week4</strong></p>
+<p>1.討論同學倉儲為什麼無法添加cmsimde</p>
+<p><strong>week5</strong></p>
+<p>1.無</p>
+<p><strong>week6</strong></p>
+<p>1.無</p><br />Develop << <a href='Develop.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
         
     <!-- footer -->
       <div class="container">
