add rust_practise 1,2

--- a/content/Rust_src.html
+++ b/content/Rust_src.html
@@ -144,7 +144,12 @@ img.add_border {
 <p>1.<a href="https://gist.githubusercontent.com/41023146/01f9ebf316fb0333e341f1bbb950d68d/raw/19e5b14cc3549dcef140bbd2bf0e54b1af00cc90/Rust">hello_world</a></p>
 <p>2.<a href="https://gist.githubusercontent.com/41023146/9f1ac36c4c187ca37996f221e7f1206e/raw/03bfea2ef0020c83e1a93a6ac52a7ceae3c7665c/Rust">string和str</a></p>
 <p>3.<a href="https://gist.githubusercontent.com/41023146/3574bd45f15294249ccc0e53afb1de2c/raw/2c4375ba62ead8288263432ee38745cc99c19de8/Rust">guess</a></p>
-<p>4.<a href="https://gist.githubusercontent.com/41023146/14ddf3b4999e13d5c3d8cb659eea1057/raw/60f4bff6e9b4e51f89909cd7b42c12f79779b9c8/Rust">if let</a></p><br />Rust << <a href='Rust.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+<p>4.<a href="https://gist.githubusercontent.com/41023146/14ddf3b4999e13d5c3d8cb659eea1057/raw/60f4bff6e9b4e51f89909cd7b42c12f79779b9c8/Rust">if let</a></p>
+<p>5.<a href="https://gist.githubusercontent.com/41023146/15de079b794dee05ac223ecf370f7afa/raw/b4f3e3289af9ba465d25d385bda257354ed09f31/Rust">練習一</a></p>
+<p>(1/1!+1/2!+1/3!+......+1/10!)</p>
+<p>6.<a href="https://gist.githubusercontent.com/41023146/ddfa2374e1ef122b8ec5b8ea42bebf21/raw/f87750cbcb4b2b8729ca8fa76f93df6c25e35b9c/Rust">練習二</a></p>
+<p>輸入(x,y)</p>
+<p>輸出 1/x+(1/x)^2+(1/x)^3+.....+(1/x)^y</p><br />Rust << <a href='Rust.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
         
     <!-- footer -->
       <div class="container">
