--- a/config/content.htm
+++ b/config/content.htm
@@ -25,7 +25,12 @@
 <p>1.<a href="https://gist.githubusercontent.com/41023146/01f9ebf316fb0333e341f1bbb950d68d/raw/19e5b14cc3549dcef140bbd2bf0e54b1af00cc90/Rust">hello_world</a></p>
 <p>2.<a href="https://gist.githubusercontent.com/41023146/9f1ac36c4c187ca37996f221e7f1206e/raw/03bfea2ef0020c83e1a93a6ac52a7ceae3c7665c/Rust">string和str</a></p>
 <p>3.<a href="https://gist.githubusercontent.com/41023146/3574bd45f15294249ccc0e53afb1de2c/raw/2c4375ba62ead8288263432ee38745cc99c19de8/Rust">guess</a></p>
-<p>4.<a href="https://gist.githubusercontent.com/41023146/14ddf3b4999e13d5c3d8cb659eea1057/raw/60f4bff6e9b4e51f89909cd7b42c12f79779b9c8/Rust">if let</a></p><h1>Develop</h1>
+<p>4.<a href="https://gist.githubusercontent.com/41023146/14ddf3b4999e13d5c3d8cb659eea1057/raw/60f4bff6e9b4e51f89909cd7b42c12f79779b9c8/Rust">if let</a></p>
+<p>5.<a href="https://gist.githubusercontent.com/41023146/15de079b794dee05ac223ecf370f7afa/raw/b4f3e3289af9ba465d25d385bda257354ed09f31/Rust">練習一</a></p>
+<p>(1/1!+1/2!+1/3!+......+1/10!)</p>
+<p>6.<a href="https://gist.githubusercontent.com/41023146/ddfa2374e1ef122b8ec5b8ea42bebf21/raw/f87750cbcb4b2b8729ca8fa76f93df6c25e35b9c/Rust">練習二</a></p>
+<p>輸入(x,y)</p>
+<p>輸出 1/x+(1/x)^2+(1/x)^3+.....+(1/x)^y</p><h1>Develop</h1>
 <p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
 <p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
 <p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
