--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -37,8 +37,12 @@
 <p>1.添加Rust頁面</p>
 <p><strong>week3</strong></p>
 <p>1.學習建立可攜系統</p>
-<p></p>
-<p></p><h1>run</h1>
+<p><strong>week4</strong></p>
+<p>1.討論同學倉儲為什麼無法添加cmsimde</p>
+<p><strong>week5</strong></p>
+<p>1.無</p>
+<p><strong>week6</strong></p>
+<p>1.無</p><h1>run</h1>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- for ggame -->
