--- a/config/content.htm
+++ b/config/content.htm
@@ -47,7 +47,10 @@
 <p><strong>week5</strong></p>
 <p>1.無</p>
 <p><strong>week6</strong></p>
-<p>1.無</p><h1>run</h1>
+<p>1.無</p>
+<p><strong>week7</strong></p>
+<p>1.學習如何設定nginx</p>
+<p>2.用gpg4win查看下載的檔案的數位簽證</p><h1>run</h1>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- for ggame -->
