--- a/content/progress rate.html
+++ b/content/progress rate.html
@@ -152,7 +152,10 @@ img.add_border {
 <p><strong>week5</strong></p>
 <p>1.無</p>
 <p><strong>week6</strong></p>
-<p>1.無</p><br />Develop << <a href='Develop.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
+<p>1.無</p>
+<p><strong>week7</strong></p>
+<p>1.學習如何設定nginx</p>
+<p>2.用gpg4win查看下載的檔案的數位簽證</p><br />Develop << <a href='Develop.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
         
     <!-- footer -->
       <div class="container">
