--- a/config/content.htm
+++ b/config/content.htm
@@ -34,7 +34,26 @@
 <p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
 <p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
 <p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
-<h1>progress rate</h1>
+<h1>Midterm</h1>
+<p></p>
+<p>1.請問如何設定 nginx, 讓其中所伺服的檔案只允許系上電腦下載?</p>
+<p>    1.先進入nginx-1.20.2\conf目錄中找到nginx.conf將裡面http下的server改成:</p>
+<div class="line number1 index0 alt2"><code class="js spaces">   </code><code class="js plain">server {</code></div>
+<div class="line number2 index1 alt1"><code class="js spaces">       </code><code class="js plain">listen       [::]:88 ipv6only=off;</code></div>
+<div class="line number3 index2 alt2"><code class="js spaces">       </code><code class="js plain">listen       88;</code></div>
+<div class="line number4 index3 alt1"><code class="js spaces">    </code> </div>
+<div class="line number5 index4 alt2"><code class="js spaces">       </code><code class="js preprocessor">#allow 140.130.XX.0/24;</code></div>
+<div class="line number6 index5 alt1"><code class="js spaces">       </code><code class="js plain">allow 2001:288:6004:XX::0/32;</code></div>
+<div class="line number7 index6 alt2"><code class="js spaces">       </code><code class="js plain">deny all;</code></div>
+<div class="line number8 index7 alt1"><code class="js spaces">    </code> </div>
+<div class="line number9 index8 alt2"><code class="js spaces">       </code><code class="js plain">location / {</code></div>
+<div class="line number10 index9 alt1"><code class="js spaces">           </code><code class="js plain">root C:/pj2022/nginx-1.20.2/spring2022;</code></div>
+<div class="line number11 index10 alt2"><code class="js spaces">       </code><code class="js plain">}</code></div>
+<div class="line number13 index12 alt2"><code class="js spaces">       </code><code class="js plain">autoindex on;</code></div>
+<div class="line number14 index13 alt1"><code class="js plain">   }</code></div>
+<p></p>
+<p></p>
+<p>2.請問如何利用 gpg4win 查驗所下載的 nginx 檔案與官方網站所附的數位簽章吻合?</p><h1>progress rate</h1>
 <p><strong>week1</strong></p>
 <p>1.<span>電腦輔助設計室IPv6 網路設定</span></p>
 <p><span>2.創建wcm2022倉儲</span></p>
