--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -34,7 +34,7 @@
 <p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
 <p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
 <p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
-<h1>progress rate</h1>
+<h1>Midterm</h1><h1>progress rate</h1>
 <p><strong>week1</strong></p>
 <p>1.<span>電腦輔助設計室IPv6 網路設定</span></p>
 <p><span>2.創建wcm2022倉儲</span></p>
@@ -47,7 +47,10 @@
 <p><strong>week5</strong></p>
 <p>1.無</p>
 <p><strong>week6</strong></p>
-<p>1.無</p><h1>run</h1>
+<p>1.無</p>
+<p><strong>week7</strong></p>
+<p>1.學習如何設定nginx</p>
+<p>2.用gpg4win查看下載的檔案的數位簽證</p><h1>run</h1>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- for ggame -->
