--- a/content/Midterm.html
+++ b/content/Midterm.html
@@ -2,7 +2,7 @@
         <head>
         <title>wcm2022</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,9 +139,26 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">run << <a href='run.html'>Previous</a> <br /><h1>runsrc</h1>
+    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>Midterm</h1>
 <p></p>
-<p>(<a href="https://raw.githubusercontent.com/41023146/cp2021_hw/main/downloads/run.txt">run.txt</a>)</p><br />run << <a href='run.html'>Previous</a> </div>
+<p>1.請問如何設定 nginx, 讓其中所伺服的檔案只允許系上電腦下載?</p>
+<p>    1.先進入nginx-1.20.2\conf目錄中找到nginx.conf將裡面http下的server改成:</p>
+<div class="line number1 index0 alt2"><code class="js spaces">   </code><code class="js plain">server {</code></div>
+<div class="line number2 index1 alt1"><code class="js spaces">       </code><code class="js plain">listen       [::]:88 ipv6only=off;</code></div>
+<div class="line number3 index2 alt2"><code class="js spaces">       </code><code class="js plain">listen       88;</code></div>
+<div class="line number4 index3 alt1"><code class="js spaces">    </code> </div>
+<div class="line number5 index4 alt2"><code class="js spaces">       </code><code class="js preprocessor">#allow 140.130.XX.0/24;</code></div>
+<div class="line number6 index5 alt1"><code class="js spaces">       </code><code class="js plain">allow 2001:288:6004:XX::0/32;</code></div>
+<div class="line number7 index6 alt2"><code class="js spaces">       </code><code class="js plain">deny all;</code></div>
+<div class="line number8 index7 alt1"><code class="js spaces">    </code> </div>
+<div class="line number9 index8 alt2"><code class="js spaces">       </code><code class="js plain">location / {</code></div>
+<div class="line number10 index9 alt1"><code class="js spaces">           </code><code class="js plain">root C:/pj2022/nginx-1.20.2/spring2022;</code></div>
+<div class="line number11 index10 alt2"><code class="js spaces">       </code><code class="js plain">}</code></div>
+<div class="line number13 index12 alt2"><code class="js spaces">       </code><code class="js plain">autoindex on;</code></div>
+<div class="line number14 index13 alt1"><code class="js plain">   }</code></div>
+<p></p>
+<p></p>
+<p>2.請問如何利用 gpg4win 查驗所下載的 nginx 檔案與官方網站所附的數位簽章吻合?</p><br />Develop << <a href='Develop.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
         
     <!-- footer -->
       <div class="container">
