--- a/config/content.htm
+++ b/config/content.htm
@@ -53,7 +53,10 @@
 <div class="line number14 index13 alt1"><code class="js plain">   }</code></div>
 <p></p>
 <p></p>
-<p>2.請問如何利用 gpg4win 查驗所下載的 nginx 檔案與官方網站所附的數位簽章吻合?</p><h1>progress rate</h1>
+<p>2.請問如何利用 gpg4win 查驗所下載的 nginx 檔案與官方網站所附的數位簽章吻合?</p>
+<p>    1.下載gpg4win</p>
+<p>    2.打開Kleopatra用(解密/檢查)打開nginx-1.20.2.zip,查看它的ID</p>
+<p>    3.再去官網下載檔案旁邊的pgp檔看兩者的ID是否一樣</p><h1>progress rate</h1>
 <p><strong>week1</strong></p>
 <p>1.<span>電腦輔助設計室IPv6 網路設定</span></p>
 <p><span>2.創建wcm2022倉儲</span></p>
