--- a/content/Midterm.html
+++ b/content/Midterm.html
@@ -158,7 +158,10 @@ img.add_border {
 <div class="line number14 index13 alt1"><code class="js plain">   }</code></div>
 <p></p>
 <p></p>
-<p>2.請問如何利用 gpg4win 查驗所下載的 nginx 檔案與官方網站所附的數位簽章吻合?</p><br />Develop << <a href='Develop.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
+<p>2.請問如何利用 gpg4win 查驗所下載的 nginx 檔案與官方網站所附的數位簽章吻合?</p>
+<p>    1.下載gpg4win</p>
+<p>    2.打開Kleopatra用(解密/檢查)打開nginx-1.20.2.zip,查看它的ID</p>
+<p>    3.再去官網下載檔案旁邊的pgp檔看兩者的ID是否一樣</p><br />Develop << <a href='Develop.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
         
     <!-- footer -->
       <div class="container">
