--- a/content/Develop.html
+++ b/content/Develop.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='Midterm.html'>Midterm</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='midterm.html'>midterm</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,11 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Rust_src << <a href='Rust_src.html'>Previous</a> <a href='Midterm.html'>Next</a> >> Midterm<br /><h1>Develop</h1>
+    <div id="tipue_search_content">Rust_src << <a href='Rust_src.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>Develop</h1>
 <p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
 <p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
 <p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
-<br />Rust_src << <a href='Rust_src.html'>Previous</a> <a href='Midterm.html'>Next</a> >> Midterm</div>
+<br />Rust_src << <a href='Rust_src.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
