--- a/content/Midterm.html
+++ b/content/Midterm.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='Midterm.html'>Midterm</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='midterm.html'>midterm</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,29 +139,29 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>Midterm</h1>
-<p></p>
-<p>1.請問如何設定 nginx, 讓其中所伺服的檔案只允許系上電腦下載?</p>
-<p>    1.先進入nginx-1.20.2\conf目錄中找到nginx.conf將裡面http下的server改成:</p>
-<div class="line number1 index0 alt2"><code class="js spaces">   </code><code class="js plain">server {</code></div>
-<div class="line number2 index1 alt1"><code class="js spaces">       </code><code class="js plain">listen       [::]:88 ipv6only=off;</code></div>
-<div class="line number3 index2 alt2"><code class="js spaces">       </code><code class="js plain">listen       88;</code></div>
-<div class="line number4 index3 alt1"><code class="js spaces">    </code> </div>
-<div class="line number5 index4 alt2"><code class="js spaces">       </code><code class="js preprocessor">#allow 140.130.XX.0/24;</code></div>
-<div class="line number6 index5 alt1"><code class="js spaces">       </code><code class="js plain">allow 2001:288:6004:XX::0/32;</code></div>
-<div class="line number7 index6 alt2"><code class="js spaces">       </code><code class="js plain">deny all;</code></div>
-<div class="line number8 index7 alt1"><code class="js spaces">    </code> </div>
-<div class="line number9 index8 alt2"><code class="js spaces">       </code><code class="js plain">location / {</code></div>
-<div class="line number10 index9 alt1"><code class="js spaces">           </code><code class="js plain">root C:/pj2022/nginx-1.20.2/spring2022;</code></div>
-<div class="line number11 index10 alt2"><code class="js spaces">       </code><code class="js plain">}</code></div>
-<div class="line number13 index12 alt2"><code class="js spaces">       </code><code class="js plain">autoindex on;</code></div>
-<div class="line number14 index13 alt1"><code class="js plain">   }</code></div>
-<p></p>
-<p></p>
-<p>2.請問如何利用 gpg4win 查驗所下載的 nginx 檔案與官方網站所附的數位簽章吻合?</p>
-<p>    1.下載gpg4win</p>
-<p>    2.打開Kleopatra用(解密/檢查)打開nginx-1.20.2.zip,查看它的ID</p>
-<p>    3.再去官網下載檔案旁邊的pgp檔看兩者的ID是否一樣</p><br />Develop << <a href='Develop.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
+    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate<br /><h1>midterm</h1>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
+<source src="./../downloads/w8_project.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><br />w8 << <a href='w8.html'>Previous</a> <a href='progress rate.html'>Next</a> >> progress rate</div>
         
     <!-- footer -->
       <div class="container">
