--- a/content/w8.html
+++ b/content/w8.html
@@ -185,8 +185,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<br />Develop << <a href='Develop.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+</div><br />Develop << <a href='Develop.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
         
     <!-- footer -->
       <div class="container">
