--- a/config/content.htm
+++ b/config/content.htm
@@ -80,8 +80,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<h1>midterm</h1>
+</div><h1>midterm</h1>
 <script>
 var winkVideoData = {
   dataVersion: 1,
