--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -80,8 +80,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<h1>midterm</h1>
+</div><h1>midterm</h1>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -93,7 +92,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="/downloads/w4_wifi/w4_wifi.mp4" type="video/mp4"/></video>
+<source src="/downloads/w8_project.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
