--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -80,7 +80,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>midterm</h1>
+</div><h1>Midterm</h1>
 <script>
 var winkVideoData = {
   dataVersion: 1,
