add w13 Brython Online programming environment construction

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -80,7 +80,9 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><h1>Midterm</h1>
+</div>
+<h1>online</h1>
+<h2>w13</h2><h1>midterm</h1>
 <script>
 var winkVideoData = {
   dataVersion: 1,
