--- a/content/w8.html
+++ b/content/w8.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='midterm.html'>midterm</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm<br /><h1>w8</h1>
+    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='online.html'>Next</a> >> online<br /><h1>w8</h1>
 <p></p>
 <p>1.請問如何設定 nginx, 讓其中所伺服的檔案只允許系上電腦下載?</p>
 <p>    1.先進入nginx-1.20.2\conf目錄中找到nginx.conf將裡面http下的server改成:</p>
@@ -185,7 +185,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />Develop << <a href='Develop.html'>Previous</a> <a href='midterm.html'>Next</a> >> midterm</div>
+</div>
+<br />Develop << <a href='Develop.html'>Previous</a> <a href='online.html'>Next</a> >> online</div>
         
     <!-- footer -->
       <div class="container">
