--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -126,7 +126,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='midterm.html'>midterm</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
                       </ul>
                 </nav>
               </div>
@@ -137,4 +137,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><ul><li><a href='Rust.html'>Rust</a><ul><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='midterm.html'>midterm</a><li><a href='progress rate.html'>progress rate</a><li><a href='run.html'>run</a><ul><li><a href='runsrc.html'>runsrc</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><ul><li><a href='Rust.html'>Rust</a><ul><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='online.html'>online</a><ul><li><a href='w13.html'>w13</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='progress rate.html'>progress rate</a><li><a href='run.html'>run</a><ul><li><a href='runsrc.html'>runsrc</a></li></ul></section></div></body></html>
