add w8_w16 progress rate

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -487,7 +487,7 @@ def clear_bd(ev):
     bd.clear()
 # Brython 3.3.4 內建的 container 名稱為  'container' 且 turtle 輸出為 svg 必須使用 div 訂定 id
 Ace = ace.Editor(editor_id="kw_editor", console_id="kw_console", container_id="kw__container", storage_id="kw_py_src" )
-Tetrisurl= "https://gist.githubusercontent.com/41023146/f73e9ce12a432f34aa373a1a1a05d85b/raw/5446f30760b31c8e5bb97b3d8b7c4c71a1b52fb7/Python"
+Tetrisurl= "https://gist.githubusercontent.com/41023146/f73e9ce12a432f34aa373a1a1a05d85b/raw/a9fdad40f39b0edb26c13b7028a7b193da9b9735/Python"
 Tetris = open(Tetrisurl).read()
 Ace.editor.setValue(Tetris)
 Ace.editor.scrollToRow(0)
@@ -522,7 +522,22 @@ doc['clear_bd'].bind('click', clear_bd)
 <p>1.無</p>
 <p><strong>week7</strong></p>
 <p>1.學習如何設定nginx</p>
-<p>2.用gpg4win查看下載的檔案的數位簽證</p><h1>run</h1>
+<p>2.用gpg4win查看下載的檔案的數位簽證</p>
+<p><strong>week8</strong></p>
+<p>1.添加midterm頁面，並加入期中考的兩個題目和答案。</p>
+<p><strong>week9</strong></p>
+<p>1.期中考週。</p>
+<p>2.期中考改為在wink影片添加註解並將影片放到個人網站。</p>
+<p><strong>week10</strong></p>
+<div class="flex-1 d-flex flex-items-center ml-3 min-width-0">
+<div class="css-truncate css-truncate-overflow">1.加入電腦輔助設計室個人虛擬主機 IP 設定</div>
+<div class="css-truncate css-truncate-overflow"></div>
+<div class="css-truncate css-truncate-overflow"><strong>week11</strong></div>
+<div class="css-truncate css-truncate-overflow"><strong></strong></div>
+<div class="css-truncate css-truncate-overflow">1.加入 w11_1a 網路對接與 RJ45 網路線相關資料</div>
+<div class="css-truncate css-truncate-overflow"></div>
+</div>
+<p></p><h1>run</h1>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- for ggame -->
