更改progress rate頁面排版

--- a/config/content.htm
+++ b/config/content.htm
@@ -508,66 +508,44 @@ doc['clear_bd'].bind('click', clear_bd)
 <div id="brython_div"></div>
 <div class="col-md-0" height="1" id="graphics-column" width="1"></div><h1>progress rate</h1>
 <p><strong>week1</strong></p>
-<p>1.<span>電腦輔助設計室IPv6 網路設定</span></p>
-<p><span>2.創建wcm2022倉儲</span></p>
+<p>1.<span>電腦輔助設計室IPv6 網路設定。</span></p>
+<p><span>2.創建wcm2022倉儲。</span></p>
 <p><strong>week2</strong></p>
-<p>1.添加Rust頁面</p>
+<p>1.添加Rust頁面。</p>
 <p><strong>week3</strong></p>
-<p>1.學習建立可攜系統</p>
+<p>1.學習建立可攜系統。</p>
 <p><strong>week4</strong></p>
-<p>1.討論同學倉儲為什麼無法添加cmsimde</p>
+<p>1.討論同學倉儲為什麼無法添加cmsimde。</p>
 <p><strong>week5</strong></p>
 <p>1.無</p>
 <p><strong>week6</strong></p>
 <p>1.無</p>
 <p><strong>week7</strong></p>
-<p>1.學習如何設定nginx</p>
-<p>2.用gpg4win查看下載的檔案的數位簽證</p>
+<p>1.學習如何設定nginx。</p>
+<p>2.用gpg4win查看下載的檔案的數位簽證。</p>
 <p><strong>week8</strong></p>
 <p>1.添加midterm頁面，並加入期中考的兩個題目和答案。</p>
 <p><strong>week9</strong></p>
 <p>1.期中考週。</p>
 <p>2.期中考改為在wink影片添加註解並將影片放到個人網站。</p>
 <p><strong>week10</strong></p>
-<div class="flex-1 d-flex flex-items-center ml-3 min-width-0">
-<div class="css-truncate css-truncate-overflow">1.加入電腦輔助設計室個人虛擬主機 IP 設定</div>
-<div class="css-truncate css-truncate-overflow"></div>
-<div class="css-truncate css-truncate-overflow"><strong>week11</strong></div>
-<div class="css-truncate css-truncate-overflow"><strong></strong></div>
-<div class="css-truncate css-truncate-overflow">1.加入 w11_1a 網路對接與 RJ45 網路線相關資料。</div>
-<div class="css-truncate css-truncate-overflow"></div>
-<div class="css-truncate css-truncate-overflow"><strong>week12</strong></div>
-<div class="css-truncate css-truncate-overflow"><strong> </strong></div>
-<div class="css-truncate css-truncate-overflow">1.建立虛擬主機</div>
-<div class="css-truncate css-truncate-overflow"></div>
-<div class="css-truncate css-truncate-overflow">2.在電腦輔助設計室設定伺服器</div>
-<div class="css-truncate css-truncate-overflow"></div>
-<div class="css-truncate css-truncate-overflow"><strong>week13</strong></div>
-<div class="css-truncate css-truncate-overflow"><strong></strong></div>
-<div class="css-truncate css-truncate-overflow">1.建立Bython環境，並加入<span>Tetris 遊戲。</span></div>
-<div class="css-truncate css-truncate-overflow"><span></span></div>
-<div class="css-truncate css-truncate-overflow"><span>2.Tetris 線上遊戲專案報告</span></div>
-<div class="css-truncate css-truncate-overflow"><span></span></div>
-<div class="css-truncate css-truncate-overflow"><strong>week14</strong></div>
-<div class="css-truncate css-truncate-overflow"><strong> </strong></div>
-<div class="css-truncate css-truncate-overflow">1.資料對比並將退選的同學資料刪除。</div>
-<div class="css-truncate css-truncate-overflow"></div>
-<div class="css-truncate css-truncate-overflow"><strong>week15</strong></div>
-<div class="css-truncate css-truncate-overflow"><strong></strong></div>
-<div class="css-truncate css-truncate-overflow">1.放假。</div>
-<div class="css-truncate css-truncate-overflow"></div>
-<div class="css-truncate css-truncate-overflow">2.將<span>Tetris 遊戲加入計分系統。</span></div>
-<div class="css-truncate css-truncate-overflow"><span></span></div>
-<div class="css-truncate css-truncate-overflow"><span>3.Tetris 遊戲計分系統報告。</span></div>
-<div class="css-truncate css-truncate-overflow"><span></span></div>
-<div class="css-truncate css-truncate-overflow"><strong>week16</strong></div>
-<div class="css-truncate css-truncate-overflow"><strong></strong></div>
-<div class="css-truncate css-truncate-overflow">1.期末報告整理。</div>
-<div class="css-truncate css-truncate-overflow"></div>
-<div class="css-truncate css-truncate-overflow"></div>
-<div class="css-truncate css-truncate-overflow"></div>
-</div>
-<p></p><h1>run</h1>
+<p>1.加入電腦輔助設計室個人虛擬主機 IP 設定。</p>
+<p><strong>week11</strong></p>
+<p>1.加入 w11_1a 網路對接與 RJ45 網路線相關資料。</p>
+<p><strong>week12</strong></p>
+<p>1.建立虛擬主機。</p>
+<p>2.在電腦輔助設計室設定伺服器</p>
+<p><strong>week13</strong></p>
+<p>1.建立Bython環境，並加入Tetris 遊戲。</p>
+<p>2.Tetris 線上遊戲專案報告。</p>
+<p><strong>week14</strong></p>
+<p>1.資料對比並將退選的同學資料刪除。</p>
+<p><strong>week15</strong></p>
+<p>1.放假。</p>
+<p>2.將<span>Tetris 遊戲加入計分系統。</span></p>
+<p>3.Tetris 遊戲計分系統報告。</p>
+<p><strong>week16</strong></p>
+<p>1.期末報告整理。</p><h1>run</h1>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- for ggame -->
