add w17 程式碼及註解

--- a/content/w17.html
+++ b/content/w17.html
@@ -140,6 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='online.html'>Next</a> >> online<br /><h1>w17</h1>
+<p><a href="https://gist.githubusercontent.com/41023146/4b7d7db9ed4add872d79820458253957/raw/bbfb947f07a01e0f23a1e572b3d27dc0e3666fa7/Python">程式原始碼及註解</a></p>
 <script>
 var winkVideoData2 = {
   dataVersion: 1,
@@ -150,17 +151,16 @@ var winkVideoData2 = {
   },
 };
 </script>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData2" height="630" muted="true" width="1008">
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData2" height="394" muted="true" width="630">
 <source src="./../downloads/w17.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarProgressLeftClass" div=""></button></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
+<div class="winkVideoControlBarProgressThumbClass">
 <div class="winkVideoPlayOverlayClass"></div>
+</div>
 </div><br />w8 << <a href='w8.html'>Previous</a> <a href='online.html'>Next</a> >> online</div>
         
     <!-- footer -->
