--- a/config/content.htm
+++ b/config/content.htm
@@ -93,17 +93,18 @@ var winkVideoData2 = {
   },
 };
 </script>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData2" height="394" muted="true" width="630">
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData2" height="630" muted="true" width="1008">
 <source src="/downloads/w17.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarProgressLeftClass" div=""></button></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass">
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-</div><h1>online</h1>
+<p>俄羅斯方塊6分影片:</p><h1>online</h1>
 <h2>w13</h2>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
