--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -82,6 +82,7 @@ var winkVideoData = {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <h1>w17</h1>
+<p><a href="https://gist.githubusercontent.com/41023146/4b7d7db9ed4add872d79820458253957/raw/bbfb947f07a01e0f23a1e572b3d27dc0e3666fa7/Python">程式原始碼及註解</a></p>
 <script>
 var winkVideoData2 = {
   dataVersion: 1,
@@ -92,17 +93,18 @@ var winkVideoData2 = {
   },
 };
 </script>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData2" height="394" muted="true" width="630">
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData2" height="630" muted="true" width="1008">
 <source src="/downloads/w17.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarProgressLeftClass" div=""></button></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass">
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-</div><h1>online</h1>
+<p>俄羅斯方塊6分影片</p><h1>online</h1>
 <h2>w13</h2>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
