--- a/content/w17.html
+++ b/content/w17.html
@@ -151,17 +151,18 @@ var winkVideoData2 = {
   },
 };
 </script>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData2" height="394" muted="true" width="630">
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData2" height="630" muted="true" width="1008">
 <source src="./../downloads/w17.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarProgressLeftClass" div=""></button></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass">
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-</div><br />w8 << <a href='w8.html'>Previous</a> <a href='online.html'>Next</a> >> online</div>
+<p>俄羅斯方塊6分影片:</p><br />w8 << <a href='w8.html'>Previous</a> <a href='online.html'>Next</a> >> online</div>
         
     <!-- footer -->
       <div class="container">
