add w18 page_Tetris

--- a/content/w17.html
+++ b/content/w17.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='w17.html'>w17</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='Tetris.html'>Tetris</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='Rust.html'>Rust</a><ul class='dropdown'><li><a href='Rust_src.html'>Rust_src</a></li></li></ul></ul><li><a href='Develop.html'>Develop</a><li><a href='w8.html'>w8</a><li><a href='w17.html'>w17</a><li><a href='w18.html'>w18</a><li class='has-children'><a href='online.html'>online</a><ul class='dropdown'><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='midterm.html'>midterm</a><li><a href='Tetris.html'>Tetris</a><li><a href='progress rate.html'>progress rate</a><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='runsrc.html'>runsrc</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='online.html'>Next</a> >> online<br /><h1>w17</h1>
+    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w18.html'>Next</a> >> w18<br /><h1>w17</h1>
 <p><a href="https://gist.githubusercontent.com/41023146/4b7d7db9ed4add872d79820458253957/raw/bbfb947f07a01e0f23a1e572b3d27dc0e3666fa7/Python">程式原始碼及註解</a></p>
 <script>
 var winkVideoData2 = {
@@ -162,7 +162,8 @@ var winkVideoData2 = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>俄羅斯方塊6分影片:</p><br />w8 << <a href='w8.html'>Previous</a> <a href='online.html'>Next</a> >> online</div>
+<p>俄羅斯方塊6分影片:</p>
+<br />w8 << <a href='w8.html'>Previous</a> <a href='w18.html'>Next</a> >> w18</div>
         
     <!-- footer -->
       <div class="container">
