更改wink影片外框大小

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -197,7 +197,7 @@ var winkVideoData3 = {
   },
 };
 </script>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData3" height="1080" muted="true" width="1920">
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData3" height="630" muted="true" width="1008">
 <source src="/downloads/期末任務影片.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
@@ -208,8 +208,7 @@ var winkVideoData3 = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<h1>期末任務2</h1>
+</div><h1>期末任務2</h1>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- for ggame -->
@@ -292,7 +291,7 @@ doc['clear_bd'].bind('click', clear_bd)
 <div id="brython_div"></div>
 <div class="col-md-0" height="1" id="graphics-column" width="1"></div>
 <script>
-var winkVideoData3 = {
+var winkVideoData4 = {
   dataVersion: 1,
   frameRate: 10,
   buttonFrameLength: 5,
@@ -301,7 +300,7 @@ var winkVideoData3 = {
   },
 };
 </script>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData3" height="1080" muted="true" width="1920">
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData4" height="1080" muted="true" width="1920">
 <source src="/downloads/期末任務影片2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
