--- a/content/期末任務1.html
+++ b/content/期末任務1.html
@@ -231,7 +231,7 @@ var winkVideoData3 = {
   },
 };
 </script>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData3" height="1080" muted="true" width="1920">
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData3" height="630" muted="true" width="1008">
 <source src="./../downloads/期末任務影片.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
@@ -242,8 +242,7 @@ var winkVideoData3 = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<br />w17 << <a href='w17.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2</div>
+</div><br />w17 << <a href='w17.html'>Previous</a> <a href='期末任務2.html'>Next</a> >> 期末任務2</div>
         
     <!-- footer -->
       <div class="container">
