add w17_w18 progress rate

--- a/config/content.htm
+++ b/config/content.htm
@@ -751,7 +751,11 @@ doc['clear_bd'].bind('click', clear_bd)
 <p>2.將<span>Tetris 遊戲加入計分系統。</span></p>
 <p>3.Tetris 遊戲計分系統報告。</p>
 <p><strong>week16</strong></p>
-<p>1.期末報告整理。</p><h1>run</h1>
+<p>1.期末報告整理。</p>
+<p><strong>week17</strong></p>
+<p>1.俄羅斯方塊6分測驗，並將影片加入到頁面中</p>
+<p><strong>week18</strong></p>
+<p>1.完成期末任務1和任務2並做成wink影片</p><h1>run</h1>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
 <!-- for ggame -->
