--- a/content/progress rate.html
+++ b/content/progress rate.html
@@ -178,7 +178,11 @@ img.add_border {
 <p>2.將<span>Tetris 遊戲加入計分系統。</span></p>
 <p>3.Tetris 遊戲計分系統報告。</p>
 <p><strong>week16</strong></p>
-<p>1.期末報告整理。</p><br />Tetris << <a href='Tetris.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
+<p>1.期末報告整理。</p>
+<p><strong>week17</strong></p>
+<p>1.俄羅斯方塊6分測驗，並將影片加入到頁面中</p>
+<p><strong>week18</strong></p>
+<p>1.完成期末任務1和任務2並做成wink影片</p><br />Tetris << <a href='Tetris.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
         
     <!-- footer -->
       <div class="container">
